adjusted dropdown navbar menu. was not working correctly on mobile in production

--- a/client/src/Style/NavStyle.css
+++ b/client/src/Style/NavStyle.css
@@ -17,8 +17,8 @@
 }
 
 #navbarSupportedContent {
-    margin-top: 48px;
-    /* background: #0d4160; */
+    position: absolute;
+    top: 56px;
     left: 0;
     width: 100%;
     padding-left: 20px;
