--- a/client/src/components/sign/SignUpAndSignIn.css
+++ b/client/src/components/sign/SignUpAndSignIn.css
@@ -6,6 +6,14 @@
     top: 10%;
     right: 5%;
 }
+hr {
+    margin-top: 1px;
+    margin-left: 7px;
+    /* margin-bottom: 1rem; */
+    border: 0;
+    width: 90%;
+    border-top: 2px solid #ffc10a;
+}
 
 .sign-blur {
     /* background: url(./girlOnMountain.jpg); */
@@ -57,7 +65,7 @@
 }
 
 .signin-close {
-    margin-top: 45%;
+    margin-top: 35%;
     height: 60%;
 }
 .signup-close {
